# ICP-Lottery

./: Cargo.toml  README.md  dfx.json  package-lock.json  package.json  webpack.config.js
scripts/: did.sh  ledger.sh  lottery.sh
src/icp_lottery/: Cargo.toml  icp_lottery.did
src/icp_lottery/src/: lib.rs  service.rs  types.rs
src/icp_lottery_backend/: Cargo.toml
src/icp_lottery_frontend/src/: index.html  index.js
