[package]
name = "icp_lottery"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[lib]
crate-type = ["cdylib"]

[dependencies]
candid = "0.9.0"
ic-cdk = "0.11.1"
serde = { version = "1", features = ["derive"] }
serde_json = "1.0"
ic-stable-structures = "0.6.0"
ic-cdk-timers = "0.5.1" # Feel free to remove this dependency if you don't need timers
icrc-ledger-types = "0.1.3"
rand_chacha="0.3.1"